force-app/main/default/objects/Project_Task__c/fields/Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource__c</fullName>
    <label>Project Resource</label>
    <referenceTo>Project_Resource__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>