force-app/main/default/objects/Project_Task__c/fields/Register_Hours__c.field-meta.xml
<CustomField>
    <fullName>Register_Hours__c</fullName>
    <label>Register Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>