force-app/main/default/objects/Project_Task__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <formula>Project_Resource__r.Resource__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource</label>
    <type>Text</type>
</CustomField>