force-app/main/default/objects/Project_Task__c/validationRules/Not_creation_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_creation_allowed</fullName>
    <active>true</active>
    <description>Only Squad Leads are allow to create tasks</description>
    <errorConditionFormula>$Profile.CreatedById != Project__r.Squad_Lead__r.Id</errorConditionFormula>
    <errorMessage>Only Project Squad Lead can create tasks.</errorMessage>
</ValidationRule>