force-app/main/default/objects/Project_Task__c/validationRules/Project_Resource_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Resource_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Project__r.Id !=Project_Resource__r.Required_Role__r.Project__r.Id</errorConditionFormula>
    <errorMessage>Only Resources in this Project can be assigned tasks.</errorMessage>
</ValidationRule>